small corrections in index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="wrapper">
             <div class="content" id="get-started">
                 <div class="box">
-                    <h1 class="box-text-title el-padding-right">Sealious application</h1>
+                    <h1 class="box-text-title el-padding-right">Simple app example</h1>
                     <div class="box-code el-right">
                         <pre>
 <span style='color:#a71d5d;'>new</span><span style='color: #795da3;'> Sealious.ChipTypes</span><span style='color:#308080; '>.</span>ResourceType<span style='color:#308080; '>(</span><span style='color:#183691; '>"employee", {</span><span style='color:#308080; '></span><span style='color:#406080; '></span>  
@@ -87,7 +87,7 @@
         <div class="wrapper">
             <div class="content">
                 <h1 class="come">Quite a lot for such a small amount of code, huh? :)
-                    <a href="http://github.com/sealious/Sealious"><br>Much more? Go to Github!</a>
+                    <br>Want to see more? <a href="http://github.com/sealious/Sealious"> View Sealious on Github!</a>
                 </h1>
             </div>
         </div>
