--- a/index.html
+++ b/index.html
@@ -57,52 +57,59 @@
         }
 <span style='color:#308080; '>});</span>
 </pre>
-                    </div><!--old area box-text el-padding-right-->
+                    </div>
+                    <!--old area box-text el-padding-right-->
                 </div>
             </div>
         </div>
-    <div class="page-4">
-        <div class="wrapper"> <!--fix for FF-->
-                    <div class="box-text el-padding-right">Sealious proposes an application architecture that enables creating applications in a highly declarative way. A simple app that would keep information about emplyees needs not much more code than. </div>
-            <div class="row">
-                <div class="column">
-                    <div class="column-title">Inserting the above code in a Sealious application will cause it to:</div>
-                    <ul>
-                        <li>create the neccessary database schema (we currently support MongoDB, but MySQL (and other db drivers) support is on its way)</li>
-                        <li>publish a JavaScript API for CRUD operations on employee resource type. The api is context-sensitive, that is it will always require information about the user that makes the request to it in order to perform any operation, and based on that context decides whether the operation is permitted for that user, or not. convallis.</li>
-                    </ul>
+        <div class="page-4">
+            <div class="wrapper">
+                <!--fix for FF-->
+                <div class="box-text el-padding-right">Sealious proposes an application architecture that enables creating applications in a highly declarative way. A simple app that would keep information about emplyees needs not much more code than. </div>
+                <div class="row">
+                    <div class="column">
+                        <div class="column-title">Inserting the above code in a Sealious application will cause it to:</div>
+                        <ul>
+                            <li>create the neccessary database schema (we currently support MongoDB, but MySQL (and other db drivers) support is on its way)</li>
+                            <li>publish a JavaScript API for CRUD operations on employee resource type. The api is context-sensitive, that is it will always require information about the user that makes the request to it in order to perform any operation, and based on that context decides whether the operation is permitted for that user, or not. convallis.</li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="column">
-                    <div class="column-title">If sealious-www-server plugin is installed:</div>
-                    <ul>
-                        <li>the web server will publish a REST-ful API, with access strategies reflecting those described in the access_strategy attribute (only admins can create new entries, but anyone can view the entries). The REST-ful API is standards-compliant and is 100% automatically generated - there's no developer involvement needed.</li>
-                    </ul>
+                <div class="row">
+                    <div class="column">
+                        <div class="column-title">If sealious-www-server plugin is installed:</div>
+                        <ul>
+                            <li>the web server will publish a REST-ful API, with access strategies reflecting those described in the access_strategy attribute (only admins can create new entries, but anyone can view the entries). The REST-ful API is standards-compliant and is 100% automatically generated - there's no developer involvement needed.</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="page-4">
-        <div class="wrapper">
-            <div class="content">
-                <h1 class="come">Quite a lot for such a small amount of code, huh? :)
-                    <br>Want to see more? <a href="http://github.com/sealious/Sealious"> View Sealious on Github!</a>
+        <div class="page-4">
+            <div class="wrapper">
+                <div class="content">
+                    <h1 class="come">Quite a lot for such a small amount of code, huh? :)
+                    <br>Want to see more? <a href="http://github.com/sealious/Sealious">View Sealious on Github!</a>
                 </h1>
+                    <h1 class="come">Who uses Sealious?</h1>
+                    <div class="placetag">
+                        <a href="http://placetag.pl"><div class="col-img-placetag"></div>
+                        <br>Placetag</a>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <footer>
-        <div class="wrapper">
-            <div class="footer-left">
-                <a href="http://www.photo-natur.de/">The seal photo was taken by Andreas Trepte.</a>
+        <footer>
+            <div class="wrapper">
+                <div class="footer-left">
+                    <a href="http://www.photo-natur.de/">The seal photo was taken by Andreas Trepte.</a>
+                </div>
+                <div class="footer-right">
+                    <span>© 2015</span>
+                    <a href="https://github.com/Sealious">Sealious Inc.</a>
+                </div>
             </div>
-            <div class="footer-right">
-                <span>© 2015</span>
-                <a href="https://github.com/Sealious">Sealious Inc.</a>
-            </div>
-        </div>
-    </footer>
+        </footer>
 </body>
 
 </html>
