added prettier placetag logo

--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
                 </h1>
                     <h1 class="come">Who uses Sealious?</h1>
                     <div class="placetag">
-                        <a href="http://placetag.pl"><div class="col-img-placetag"></div>
-                        <br>Placetag</a>
+                        <a href="http://placetag.pl"><div class="col-img-placetag"></div></a>
                     </div>
                 </div>
             </div>
