--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Sealious</title>
-    <META http-equiv="refresh" content="0;URL=http://sealious.github.io/Sealious/">
+    <META http-equiv="refresh" content="0;URL=http://sealious.github.io/">
 </head>
 
 <body>
